@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-02T08:24:32Z",
-  "count_outdated" : 144,
-  "uniques_outdated" : 100,
+  "timestamp" : "2022-10-03T08:27:23Z",
+  "count_outdated" : 145,
+  "uniques_outdated" : 101,
   "count" : 151,
   "uniques" : 107,
   "clones" : [
-    {
-      "timestamp": "2022-09-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-22T00:00:00Z",
       "count": 1,
