@@ -1,3 +1,11 @@
+2022-10-03T08:27:23Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3172681070
+* notice: last 14d: unq all: 1 6
+* notice: prev accum: outdated-unq outdated-all / unq all: 100 144 / 107 151
+* notice: next accum: outdated-unq outdated-all / unq all: 101 145 / 107 151
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-09-19] / []
+
 2022-10-02T08:24:32Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3167885088
 * notice: last 14d: unq all: 1 7
